--- a/index.html
+++ b/index.html
@@ -6,45 +6,9 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
-    <style>
-      .calculadora {
-        margin-top: 40px;
-        border: solid 1px #000;
-        padding: 20px;
-        background-color: #2E2E2E;
-        border-radius: 10px;
-        box-shadow: 1px 1px 5px #000;
-      }
+    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <script src="script.js"></script>
 
-      .btn {
-        width: 60px;
-        height: 50px;
-        margin: 5px;
-        box-shadow: 1px 1px 1px #000;
-      }
-
-      .clear {
-        width: 130px;
-      }
-
-      .enter {
-        height: 110px;
-      }
-
-      .zero {
-        width: 130px;
-      }
-
-      .resultado {
-        text-align: right;
-        font-size: 20px;
-        margin-top: 10px;
-        margin-bottom: 20px;
-        border: solid 1px #000;
-        box-shadow: 1px 1px 1px #000;
-      }
-
-    </style>
 	</head>
 
   <body style="background: #D9D9D9">
@@ -92,28 +56,7 @@
           </div>
         </div>
       </div>
-    </div> 
-    <script>
-      function calcular(tipo, valor) {
-        if (tipo === 'acao') {
-          if (valor === 'c') {
-            //limpar o visor (id resultado)
-            document.getElementById('resultado').value = ''
-          }
-          if (valor === '+' || valor === '-' || valor === '*' || valor === '/' || valor === '.') {
-            document.getElementById('resultado').value += valor
-          }
-          if (valor === '=') {
-            var valor_campo = eval(document.getElementById('resultado').value) //eval() pega uma string e transforma numa operaçao matematica
-            document.getElementById('resultado').value = valor_campo
-          }
-
-        } else if (tipo === 'valor') {
-          document.getElementById('resultado').value += valor
-        }
-
-      }
-    </script>   
+    </div>   
   </body>	
 
 </html>
